--- a/src/app/skill/skill.component.html
+++ b/src/app/skill/skill.component.html
@@ -1,1 +1,5 @@
-<p>{{lastName}}</p>
+<div>
+  <p>{{skill.name}} <a href="{{skill.site}}">Informations</a></p>
+  <img src="{{skill.logo}}" alt="">
+</div>
+
