--- a/src/app/developer/developer.component.html
+++ b/src/app/developer/developer.component.html
@@ -1,1 +1,10 @@
-<app-skill></app-skill>
+<div>
+  <img src="https://pbs.twimg.com/profile_images/1145375954325397504/u8ungSgD_400x400.jpg" alt="">
+  <p>{{developer.firstName}} {{developer.lastName}}</p>
+  <p>{{developer.age}} / {{developer.gender}}</p>
+  <p>Citation : "{{developer.biography}}"</p>
+  <div class="div-container">
+    <app-skill *ngFor="let skill of developer.skillsList"
+    [skill]="skill"></app-skill>
+  </div>
+</div>
