--- a/src/app/10-services/cocktailslist/cocktailslist.component.html
+++ b/src/app/10-services/cocktailslist/cocktailslist.component.html
@@ -1,9 +1,5 @@
 <h1>Liste des cocktails</h1>
-<section>
-  <div *ngFor="let cocktail of cocktailsList">
-    <img [src]="cocktail.img" alt="">
-    <p>{{cocktail.name}}</p>
-    <p>{{cocktail.price}}€</p>
-  </div>
-</section>
+<app-cocktail *ngFor="let cocktail of cocktailsList" [cocktail]="cocktail"></app-cocktail>
+
+
 
